# advanced-streaming

./: CMakeLists.txt  README.md  conanfile.txt  sample.sh
intercept/: CMakeLists.txt  gstintercept.c  gstintercept.h  run.sh
multipipe/: CMakeLists.txt  main.cpp
pipeline-interception/: CMakeLists.txt  main.cpp  streamer.cpp  streamer.h
stillimage/: CMakeLists.txt  main.cpp
thumbnails/: CMakeLists.txt  main.cpp  streamer.cpp  streamer.h
